--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "cocoalibspotify"]
-	path = cocoalibspotify
+[submodule "iOSClient/External/cocoalibspotify"]
+	path = iOSClient/External/cocoalibspotify
 	url = https://github.com/spotify/cocoalibspotify.git
