--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,6 @@
 _obj
 _test
 
-#OSX Files
-.DS_Store
-
 #Spotify
 appkey.h
 
@@ -26,3 +23,22 @@ _cgo_export.*
 _testmain.go
 
 *.exe
+
+
+# Xcode & OSX
+.DS_Store
+*/build/*
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+profile
+*.moved-aside
+DerivedData
+.idea/
+*.hmap
