--- a/Server/Makefile
+++ b/Server/Makefile
@@ -1,3 +1,3 @@
 default:
-	go build musicBoxServer.go types.go
-	go build loginServer.go types.go
+	go build musicBoxServer.go serverLogic.go auth.go aws.go rpc.go types.go
+	#go build loginServer.go types.go
