More server-side cleanup

--- a/Server/Makefile
+++ b/Server/Makefile
@@ -1,3 +1,2 @@
 default:
-	go build musicBoxServer.go serverLogic.go auth.go aws.go rpc.go types.go
-	#go build loginServer.go types.go
+	go install MusicBox/Server
